# lv-sandbox

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh.md  SECURITY.md
.gitcode/workflows/: probe-runner.yml
.github/workflows/: ci.yml  release.yml
crates/lv-cli/: Cargo.toml  README.md
crates/lv-cli/src/: main.rs
crates/lv-cli/tests/: cli.rs
crates/sandbox-cgroup/: Cargo.toml
crates/sandbox-cgroup/src/: detect.rs  error.rs  lib.rs  manager.rs  resources.rs
crates/sandbox-cgroup/tests/: cgroup_tests.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/benches/: bench_lifecycle.rs
crates/sandbox-core/src/: capability.rs  egress.rs  env.rs  error.rs  fd.rs  job.rs  lib.rs  process.rs  profile.rs  proxy.rs  recovery.rs  rlimit.rs  sandbox_context.rs  workspace.rs
crates/sandbox-core/tests/: disk_quota_tests.rs  env_tests.rs  file_io_tests.rs  job_tests.rs  process_tests.rs  recovery_tests.rs  rlimit_tests.rs  stream_tests.rs  workspace_tests.rs
crates/sandbox-landlock/: Cargo.toml
crates/sandbox-landlock/examples/: proc_preexec.rs
crates/sandbox-landlock/src/: abi.rs  access.rs  error.rs  lib.rs  policy.rs  ruleset.rs
crates/sandbox-landlock/tests/: landlock_tests.rs
crates/sandbox-mcp/: Cargo.toml
crates/sandbox-mcp/src/: client.rs  lib.rs  main.rs  server.rs  tools.rs
crates/sandbox-seccomp/: Cargo.toml
crates/sandbox-seccomp/src/: allowlist.rs  clone_filter.rs  error.rs  filter.rs  lib.rs  profile.rs  syscall.rs
crates/sandbox-seccomp/tests/: seccomp_tests.rs
crates/sandbox-server/: Cargo.toml
crates/sandbox-server/src/: api.rs  audit.rs  config.rs  lib.rs  main.rs  metrics.rs  otel.rs  ratelimit.rs  redact.rs  scheduler.rs  session.rs  tty.rs  webhook.rs  worker.rs
crates/sandbox-server/tests/: audit_tests.rs  config_tests.rs  session_tests.rs
docker/: config.yaml
docs/: api.md  architecture.md  comparison.md  network-isolation.md  security.md  usage.md
docs/integrations/: claude-code.md
docs/zh/: api.md  architecture.md  comparison.md  network-isolation.md  security.md  usage.md
docs/zh/integrations/: claude-code.md
helpers/node/: sandbox-net.js
helpers/python/: sandbox_net.py
helpers/shell/: sandbox-curl
scripts/: build-release.sh  build-template.sh  verify-image.sh
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/src/lvsandbox/: __init__.py  client.py  errors.py  models.py  sse.py  tools.py
sdk/python/tests/: conftest.py  test_sdk.py
sdk/typescript/: README.md  index.test.ts  index.ts  package-lock.json  package.json  tsconfig.json
tests/e2e/: Cargo.toml
tests/e2e/src/: fixtures.rs  helpers.rs  lib.rs
tests/e2e/tests/: concurrency.rs  error_paths.rs  http_lifecycle.rs  network_egress.rs  profile_custom.rs  profile_node.rs  profile_python.rs  rate_limit.rs  runtime_profiles.rs  security_isolation.rs  session_lifecycle.rs  timeout_metrics.rs
