[package]
name = "lv-cli"
description = "lv-sandbox CLI (lvs) — manage jobs, sessions, files, snapshots, volumes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lvs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
