[package]
name = "sandbox-cgroup"
description = "cgroup v2 management: availability detection, resource limits, process migration, usage accounting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
libc = { workspace = true }
