[package]
name = "sandbox-landlock"
description = "Landlock LSM wrapper: ABI detection, filesystem policy building, precompiled ruleset"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
landlock = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
