[package]
name = "sandbox-seccomp"
description = "seccomp-BPF management: filter builder, denylist, clone namespace flag filtering"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libseccomp = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
