[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvsandbox"
version = "0.5.0"
description = "Python client SDK for lv-sandbox (lightweight agent sandbox)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "lv-agent" }]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/lvsandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running lv-sandbox server"]
